--- a/Reports/Final Report/Design.tex
+++ b/Reports/Final Report/Design.tex
@@ -273,21 +273,21 @@
 			\end{figure}
 			
 		\subsection{The Level namespace}
-			The \texttt{Level} namespace is the namespace responsible for
-			loading levels into the game world. Levels are made using Tiled,
-			a free level design tool that can be used to visually create 
+   the namespace responsible for
+ed,
+
 			tile-based levels. These levels can then be exported to XML files,
-			which the code in the namespace can use to recreate the levels
+
 			in Unity scenes.
-			
+
 		\subsection{The Graphics namespace}
-			The \texttt{Graphics} namespace is a small namespace containing
-			classes that render the laser beams better. Before usage of the
-			classes in this namespace, the laser beams did not look too good
-			after being emitted from an emitter. Just the LineRenderer
+ a small namespace containing
+
+d
+
 			functionality in Unity did not do them much justice.
-			
-		\subsection{Experimental code: the RandomLevel namespace} \label{ssec:randomlevelnamespace}
+
+\subsection{Experimental code: the RandomLevel namespace} \label{ssec:randomlevelnamespace}
 			The \texttt{RandomLevel} namespace is an abandoned and deleted
 			namespace, which contained code that, when deployed, would create
 			rather simple but random levels with one target and one laser.
@@ -443,14 +443,8 @@
 			for being able to get to a goal using a different route than you were
 			supposed to, often making it far easier than it should be. Gamers making
 			use of this "break the sequence" of actions in the game, hence the term).
-			An image of a checkpoint is shown in \ref{fig:checkpoint}. Once it is
-			hit, it starts spinning, giving visual feedback of being hit.
-			\begin{figure}[!ht]
-				\centering
-				\includegraphics[scale = 0.7]{Checkpoint}
-				\caption{The checkpoint.}
-				\label{fig:checkpoint}
-			\end{figure}
+			An image of a checkpoint is shown in TODO
+			%TODO: IMAGE CHECKPOINT.
 			
 		\subsection{Portal} \label{ssec:portal}
 			The portal is a more advanced game object. It allows light that travels 
