Wrote part about 'Level' namespace.
Also renamed 'namespace' to the more general understood
'component', to make it easier for non-CS oriented people
to understand.

--- a/Reports/Final Report/QualityAssurance.tex
+++ b/Reports/Final Report/QualityAssurance.tex
@@ -2,12 +2,12 @@
 	This chapter explains and describes various quality assurance techniques 
 	that were used during the project, to allow us to deliver a product of 
 	good quality (regarding both code quality and gameplay quality). It also
-	talks a bit about Microsoft Visual Studio first, our IDE of choice for
+	talks a bit about Microsoft Visual Studio first, our editor of choice for
 	this project, considering that some QA tools are not available for
-	MonoDevelop, the standard IDE packaged with Unity.
+	MonoDevelop, the standard editor packaged with Unity.
 	
 	\section{IDE used for programming} \label{sec:ide}
-		The IDE used for programming was Microsoft Visual Studio. Unity has an IDE
+		The IDE used for programming was Microsoft Visual Studio. Unity has an editor
 		of its own available for programming in C\#, which is called MonoDevelop.
 		However, the MonoDevelop IDE is really lacking in functionality. It has no
 		support for the plugins that we use to check our code. Furthermore, the use
@@ -141,8 +141,8 @@
             require any extra tools to actually generate the report that
             describes the measuring results. These are immediately afterwards
             given in a HTML file. An example of such a report and its results
-            is given in \ref{cpppie}, while an example of which lines of code have
-            been analyzed is given in \ref{cpplines}.
+            is given in \ref{fig:cpppie}, while an example of which lines of code have
+            been analyzed is given in \ref{fig:cpplines}.
             
             \begin{figure}[!ht]
             	\centering
