Added part about 'Level' component.

--- a/Reports/Final Report/Bibliography.bib
+++ b/Reports/Final Report/Bibliography.bib
@@ -84,3 +84,11 @@ year   = 2015,
 note   = "\url{http://nl.visualead.com/},
           Accessed 01-May-2015"
 }
+
+@misc{tiled,
+    title  = "Tiled Map Editor",
+    author = "T. Lindeijer",
+    year   = 2014,
+    note   = "\url{http://www.mapeditor.org/},
+    Accessed 23-June-2015"
+}
