Re-added the image of the checkpoint.

--- a/Reports/Final Report/Design.tex
+++ b/Reports/Final Report/Design.tex
@@ -455,8 +455,13 @@
 			for being able to get to a goal using a different route than you were
 			supposed to, often making it far easier than it should be. Gamers making
 			use of this "break the sequence" of actions in the game, hence the term).
-			An image of a checkpoint is shown in TODO
-			%TODO: IMAGE CHECKPOINT.
+			An image of a checkpoint is shown in \ref{fig:checkpoint}
+			\begin{figure}[!ht]
+				\centering
+				\includegraphics[scale = 0.5]{Checkpoint}
+				\caption{A checkpoint.}
+				\label{fig:checkpoint}
+			\end{figure}
 			
 		\subsection{Portal} \label{ssec:portal}
 			The portal is a more advanced game object. It allows light that travels 
