fixed 2 typos and 1 error in report

--- a/Reports/Final Report/Design.tex
+++ b/Reports/Final Report/Design.tex
@@ -260,7 +260,7 @@
             another component.
 			
 			By design, and because of how it was conceived, the \texttt{Vision} 
-			component depends heavily on the \texttt{Projection} component.
+			component depends lightly on the \texttt{Projection} component.
 			However, this dependency is not cyclic, and should not cause too
 			much of a problem because of it, when viewed from a software
 			engineering standpoint. The only communication from the \texttt{Vision}
