--- a/Reports/Final Report/FinalReport.tex
+++ b/Reports/Final Report/FinalReport.tex
@@ -18,7 +18,7 @@
 \maketitle
 
 \begin{abstract}
-This report describes the procedure of development of an augmented reality game
+This report describes the development of an augmented reality game
 for the TU Delft. This game, called the \emph{Augmented Reality Mirror Game},
 is a game that uses augmented reality technology to simulate lasers, mirrors,
 a target (or multiple targets), and walls. The goal of this game is to use
